<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo"
    tools:context=".LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:id="@+id/linear1">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/logo_home"
                android:layout_marginTop="41.7dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_below="@+id/linear1">

            <TextView
                android:layout_width="97.7dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="11dp"
                android:layout_marginTop="32.3dp"
                android:textAlignment="center"
                android:textColor="@color/charcoal_grey"
                android:textSize="13.3sp"
                android:textStyle="bold"
                android:text="@string/bem_vindo" />

            <TextView
                android:layout_width="182dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="11dp"
                android:fontFamily="sans-serif"
                android:gravity="center_horizontal"
                android:lineSpacingExtra="2.3sp"
                android:text="@string/frase_login"
                android:textColor="@color/charcoal_grey"
                android:textSize="10.7sp"
                android:textStyle="normal" />



        </LinearLayout>


        <LinearLayout
            android:id="@+id/linear3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:layout_below="@+id/linear2">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:layout_marginTop="39.3dp"
                android:textColorHint="@color/charcoal_grey">


                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp"
                    android:textColor="@color/charcoal_grey"
                    android:drawableLeft="@drawable/ic_email"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif"
                    android:textStyle="normal"
                    android:letterSpacing="-0.01" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/senha"
                android:layout_marginTop="17.7dp"
                android:textColorHint="@color/charcoal_grey">

                <EditText
                    android:id="@+id/senha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:layout_marginTop="17.7dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:drawableLeft="@drawable/ic_cadeado"
                    android:textSize="16sp"
                    android:fontFamily="sans-serif"
                    android:textStyle="normal"
                    android:textColor="@color/charcoal_grey"
                    android:letterSpacing="-0.01" />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_below="@+id/linear3"
            android:layout_marginTop="22dp">

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:text="@string/entrar"
                android:textSize="20sp"
                android:background="@color/greeny_blue"
                android:textColor="@color/branco"/>


        </LinearLayout>

    </RelativeLayout>

</ScrollView>


